included date in the submission list view display "No Data Available" if there are no submissions to display begin work on the submission filters

--- a/core/templates/core/submission_header.html
+++ b/core/templates/core/submission_header.html
@@ -1,5 +1,6 @@
 <tr>
     <th>Monitor ID</th>
+    <th>Date</th>
     {% for location_type in location_types %}
     <th>{{ location_type.name }}</th>
     {% endfor %}
