handling post data

--- a/core/templates/core/submission_list.html
+++ b/core/templates/core/submission_list.html
@@ -3,29 +3,27 @@
 <div class="row">
   <div class="span12">
     <div class="well" style="padding-bottom:0">
-      <form>
+      <form action="" method="post" id="filter">
+        {% csrf_token %}
       <div class="controls controls-row">
-        <input class="span2" type="text" placeholder="Monitor ID">
-        <input class="span2" type="text" placeholder="Date">
-        <input class="span5" type="text" class="input-xlarge" placeholder="Location">
+        <input class="span2" type="text" name="monitor" placeholder="Monitor ID">
+        <input class="span2" type="text" name="date" placeholder="Date">
+        <input class="span5" type="text" name="location" class="input-xlarge" placeholder="Location">
       </div>
       <div class="controls controls-row">
-        <select class="span2">
+        <select class="span2" name="setup">
           <option>Setup Status</option>
           <option>Setup Partial</option>
           <option>Setup Missing</option>
           <option>Setup Complete</option>
         </select>
-        <select class="span2">
+        <select class="span2" name="voting">
           <option>Voting Status</option>
           <option>Voting Partial</option>
           <option>Voting Missing</option>
           <option>Voting Complete</option>
         </select>
-        <a type="submit" class="span1 btn btn-warning"><i class="icon-search icon-white"></i> Search</a>
-      </div>
-      <div class="controls controls-row">
-        
+        <a type="submit" class="span1 btn btn-warning" href="javascript:document.getElementById('filter').submit();"><i class="icon-search icon-white"></i> Search</a>
       </div>
       </form>
     </div>
