--- a/core/templates/core/submission_list.html
+++ b/core/templates/core/submission_list.html
@@ -7,8 +7,11 @@
         {% csrf_token %}
       <div class="controls controls-row">
         <input class="span2" type="text" name="monitor" placeholder="Monitor ID">
-        <input class="span2" type="text" name="date" placeholder="Date">
-        <input class="span5" type="text" name="location" class="input-xlarge" placeholder="Location">
+        <div class="input-append date span2 datesel" id="dp3" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
+          <input class="span2" style="width:129px" size="16" type="text" value="12-02-2012" readonly="">
+          <span class="add-on"><i class="icon-calendar"></i></span>
+        </div>
+        <input class="span4" type="text" name="location" class="input-xlarge" placeholder="Location">
       </div>
       <div class="controls controls-row">
         <select class="span2" name="setup">
