reduced page header font size in layout template

--- a/core/static/css/custom.css
+++ b/core/static/css/custom.css
@@ -1,4 +1,4 @@
-.h2_style{
+.h_style{
 	border-top: 1px dashed #D3DAD9; border-bottom: 1px dashed #D3DAD9; font-weight: normal; font-style:italic; padding-top:.5em; padding-bottom:.5em; padding-left:1em;
 }
 .con_style{padding-top:1.2em; padding-bottom:1em;}
