--- a/core/templates/core/layout.html
+++ b/core/templates/core/layout.html
@@ -43,7 +43,7 @@
         </div>
       </div>
     <div class="container con_style">
-      <h2 class="h2_style">{{ page_title }}</h2>
+      <h3 class="h_style">{{ page_title }}</h3>
     </div>
     <div class="container">
       {% block content %}{% endblock %}
