display abbreviated versions of group names if available

--- a/core/templates/core/submission_header.html
+++ b/core/templates/core/submission_header.html
@@ -7,7 +7,7 @@
     <th>Supervisor</th>
     <th>Monitor</th>
     {% for group in form_groups %}
-    <th style="text-align:center">{{ group.name }}</th>
+    <th style="text-align:center">{% if group.abbr %}{{ group.abbr }}{% else %}{{ group.name }}{% endif %}</th>
     {% endfor %}
     <th style="text-align:center">Edit</th>
 </tr>
