--- a/core/static/css/custom.css
+++ b/core/static/css/custom.css
@@ -2,3 +2,6 @@
 	border-top: 1px dashed #D3DAD9; border-bottom: 1px dashed #D3DAD9; font-weight: normal; font-style:italic; padding-top:.5em; padding-bottom:.5em; padding-left:1em;
 }
 .con_style{padding-top:1.2em; padding-bottom:1em;}
+.options {
+    display: block; margin-top: 0.5em;
+}
