--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -25,36 +25,56 @@
 <div class="row-fluid">
   <div class="span6 well">
     <legend>Setup</legend>
-    <div class="progress">
-      <div class="bar bar-success" style="width: 30%;"></div>
-      <div class="bar bar-warning" style="width: 50%;"></div>
-      <div class="bar bar-danger" style="width: 20%;"></div>
+    <div id="setup">
+      <table>
+    <thead>
+        <tr>
+            <th>Fruit name</th>
+            <th>Value</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Apples</td>
+            <td>500</td>
+        </tr>
+        <tr>
+            <td>Pears</td>
+            <td>200000</td>
+        </tr>
+        <tr>
+            <td>Plums</td>
+            <td>5</td>
+        </tr>
+        <tr>
+            <td>Bananas</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>Oranges</td>
+            <td>2</td>
+        </tr>
+    </tbody>
+</table>​
     </div>
   </div>
   <div class="span6 well">
     <legend>Voting</legend>
-    <div class="progress">
-      <div class="bar bar-success" style="width: 30%;"></div>
-      <div class="bar bar-warning" style="width: 50%;"></div>
-      <div class="bar bar-danger" style="width: 20%;"></div>
-    </div>
+    <div id="voting">
+      
   </div>
 </div>
 <div class="row-fluid">
   <div class="span6 well">
     <legend>Counting</legend>
-    <div class="progress">
-      <div class="bar bar-success" style="width: 30%;"></div>
-      <div class="bar bar-warning" style="width: 50%;"></div>
-      <div class="bar bar-danger" style="width: 20%;"></div>
+    <div id="counting">
+      
     </div>
   </div>
   <div class="span6 well">
     <legend>Closing</legend>
-    <div class="progress">
-      <div class="bar bar-success" style="width: 30%;"></div>
-      <div class="bar bar-warning" style="width: 50%;"></div>
-      <div class="bar bar-danger" style="width: 20%;"></div>
+    <div id="closing">
+      
     </div>
   </div>
 </div>
