created map section on the dashboard

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -23,29 +23,32 @@
   </div>
 </div>
 <div class="row-fluid">
-  <div class="span6 well">
+  <div class="span3 well">
     <legend>Setup</legend>
     <div id="setup">
     </div>
   </div>
-  <div class="span6 well">
+  <div class="span3 well">
     <legend>Voting</legend>
     <div id="voting">
       
   </div>
 </div>
-<div class="row-fluid">
-  <div class="span6 well">
+  <div class="span3 well">
     <legend>Counting</legend>
     <div id="counting">
       
     </div>
   </div>
-  <div class="span6 well">
+  <div class="span3 well">
     <legend>Closing</legend>
     <div id="closing">
       
     </div>
   </div>
-</div>
+  <div class="row-fluid">
+    <div class="span12">
+      <legend>Maps</legend>
+    </div>
+  </div>
 {% endblock %}
