made modifications to chart dat on checklist_analysis'

--- a/core/templates/core/checklist_analysis.html
+++ b/core/templates/core/checklist_analysis.html
@@ -2,6 +2,7 @@
 {% block content %}
 <style type="text/css">
 	.td_width{width: 20em;}
+	td, th {padding: .3em;}
 </style>
 <div class="row">
   <div class="span12">
@@ -26,7 +27,7 @@
 </div>
 <div class="row-fluid">
   <div class="span12">
-      <table class="">
+      <table class="" cellspacing="10">
 	    <thead>
 	    	<h4 class="well">Yes or No Questions</h4>	
 	        <tr>
@@ -212,9 +213,9 @@
   <div class="row-fluid">
   <div class="span12">
     <div class="">
-	   <table class="">
+	   <table class="" cellspacing="10">
 		    <thead>
-		    	<h4 class="well">Options Questions</h4>	
+		    	<h4 class="well">Option Questions</h4>	
 		        <tr>
 		            <th>CF</th>
 		            <th>CG</th>
@@ -397,7 +398,7 @@
   </div>
     <div class="row-fluid">
 	  <div class="span12">
-	      <table class="">
+	      <table class="" cellspacing="80">
 		    <thead>
 		    	<h4 class="well">Numeric Questions</h4>	
 		        <tr>
