--- a/core/templates/core/forms_menu.html
+++ b/core/templates/core/forms_menu.html
@@ -1,3 +1,8 @@
 {% for form in forms %}
-<li><a href="{% url submissions_list form.pk %}"><i class="icon-check"></i> {{ form.name }}</a></li>
+<li class="dropdown"><a href="{% url submissions_list form.pk %}" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-check"></i> {{ form.name }} <b class="caret"></b></a>
+    <ul class="dropdown-menu">
+        <li><a href="{% url submissions_list form.pk %}"><i class="icon-list"></i> {{ form.name }}</a></li>
+        <li><a href="{% url submissions_analysis form.pk %}"><i class="icon-tasks"></i> {{ form.name }} Analysis</a></li>
+    </ul>
+</li>
 {% endfor %}
