--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -25,25 +25,163 @@
 <div class="row-fluid">
   <div class="span3 well">
     <legend>Setup</legend>
-    <div id="setup">
+    <div>
+      <script type="text/javascript+protovis">
+        width = 250,
+        height = 200,
+        offset = 10,
+        r = width/2 - offset;
+        data = [1000, 800, 2933];
+        colors = ["#ff0d00", "#fff800", "#39e639"];
+        labels = ['Missing', 'Partial', 'Complete'];
+
+        var pie = new pv.Panel().width(width).height(height);
+            pie.add(pv.Wedge)
+            .data(pv.normalize(data))
+            .outerRadius(70)
+            .angle(function(d) d * 2 * Math.PI)
+            .left(70)
+            .top(100)
+            .fillStyle(pv.colors(colors).by(function () { return this.index;}))
+            .anchor("center")
+            .add(pv.Label)
+            .textAngle(0)
+            .text(function(d){ return (d*100).toFixed(0) + "%"});
+            
+        //legends   
+        pie.add(pv.Dot) 
+            .data(labels) 
+            .top(function() 70 + this.index * 18)
+            .right(90) 
+            .size(20) 
+            .strokeStyle(null) 
+            .fillStyle(pv.colors(colors)) 
+            .anchor("right").add(pv.Label)
+            .textMargin(8);
+            
+        pie.render();
+      </script>
     </div>
   </div>
   <div class="span3 well">
     <legend>Voting</legend>
-    <div id="voting">
+    <script type="text/javascript+protovis">
+        width = 250,
+        height = 200,
+        offset = 10,
+        r = width/2 - offset;
+        data = [459, 1800, 828];
+        colors = ["#ff0d00", "#fff800", "#39e639"];
+        labels = ['Missing', 'Partial', 'Complete'];
+
+        var pie = new pv.Panel().width(width).height(height);
+            pie.add(pv.Wedge)
+            .data(pv.normalize(data))
+            .outerRadius(70)
+            .angle(function(d) d * 2 * Math.PI)
+            .left(70)
+            .top(100)
+            .fillStyle(pv.colors(colors).by(function () { return this.index;}))
+            .anchor("center")
+            .add(pv.Label)
+            .textAngle(0)
+            .text(function(d){ return (d*100).toFixed(0) + "%"});
+            
+        //legends   
+        pie.add(pv.Dot) 
+            .data(labels) 
+            .top(function() 70 + this.index * 18)
+            .right(90) 
+            .size(20) 
+            .strokeStyle(null) 
+            .fillStyle(pv.colors(colors)) 
+            .anchor("right").add(pv.Label)
+            .textMargin(8);
+            
+        pie.render();
+      </script>
+    <div>
       
   </div>
 </div>
   <div class="span3 well">
     <legend>Counting</legend>
-    <div id="counting">
-      
+    <div>
+     <script type="text/javascript+protovis">
+        width = 250,
+        height = 200,
+        offset = 10,
+        r = width/2 - offset;
+        data = [2929, 999, 444];
+        colors = ["#ff0d00", "#fff800", "#39e639"];
+        labels = ['Missing', 'Partial', 'Complete'];
+
+        var pie = new pv.Panel().width(width).height(height);
+            pie.add(pv.Wedge)
+            .data(pv.normalize(data))
+            .outerRadius(70)
+            .angle(function(d) d * 2 * Math.PI)
+            .left(70)
+            .top(100)
+            .fillStyle(pv.colors(colors).by(function () { return this.index;}))
+            .anchor("center")
+            .add(pv.Label)
+            .textAngle(0)
+            .text(function(d){ return (d*100).toFixed(0) + "%"});
+            
+        //legends   
+        pie.add(pv.Dot) 
+            .data(labels) 
+            .top(function() 70 + this.index * 18)
+            .right(90) 
+            .size(20) 
+            .strokeStyle(null) 
+            .fillStyle(pv.colors(colors)) 
+            .anchor("right").add(pv.Label)
+            .textMargin(8);
+            
+        pie.render();
+      </script> 
     </div>
   </div>
   <div class="span3 well">
     <legend>Closing</legend>
-    <div id="closing">
-      
+    <div>
+      <script type="text/javascript+protovis">
+        width = 250,
+        height = 200,
+        offset = 10,
+        r = width/2 - offset;
+        data = [299, 350, 3000];
+        colors = ["#ff0d00", "#fff800", "#39e639"];
+        labels = ['Missing', 'Partial', 'Complete'];
+
+        var pie = new pv.Panel().width(width).height(height);
+            pie.add(pv.Wedge)
+            .data(pv.normalize(data))
+            .outerRadius(70)
+            .angle(function(d) d * 2 * Math.PI)
+            .left(70)
+            .top(100)
+            .fillStyle(pv.colors(colors).by(function () { return this.index;}))
+            .anchor("center")
+            .add(pv.Label)
+            .textAngle(0)
+            .text(function(d){ return (d*100).toFixed(0) + "%"});
+            
+        //legends   
+        pie.add(pv.Dot) 
+            .data(labels) 
+            .top(function() 70 + this.index * 18)
+            .right(90) 
+            .size(20) 
+            .strokeStyle(null) 
+            .fillStyle(pv.colors(colors)) 
+            .anchor("right").add(pv.Label)
+            .textMargin(8);
+            
+        pie.render();
+      </script>
     </div>
   </div>
   <div class="row-fluid">
