--- a/core/templates/core/submission_header.html
+++ b/core/templates/core/submission_header.html
@@ -8,7 +8,7 @@
     <th>Monitor</th>
     {% if form.type == 'CHECKLIST' %}
     {% for group in form_groups %}
-    <th style="text-align:center">{% if group.abbr %}{{ group.abbr }}{% else %}{{ group.name }}{% endif %}</th>
+    <th style="text-align:center">{% if group.abbr %}<abbr title="{{ group.name }}">{{ group.abbr }}</abbr>{% else %}{{ group.name }}{% endif %}</th>
     {% endfor %}
     {% else %}
     {% for field in form_fields %}
