--- a/core/templates/core/submission_edit.html
+++ b/core/templates/core/submission_edit.html
@@ -8,6 +8,7 @@
     <div class="span12">
       <table class="table table-bordered">
         <thead>
+          {% if submission.form.type == 'CHECKLIST' %}
           <tr>
             <th>&nbsp;</th>
             <th>1</th>
@@ -15,6 +16,7 @@
             <th>{{ forloop.counter|add:"1" }}</th>
             {% endfor %}
           </tr>
+          {% endif %}
           <tr>
             <th>Monitor</th>
             <td>{{ submission.observer }}</td>
@@ -38,6 +40,7 @@
           </tr>
         </thead>
       </table>
+      {% if submission.form.type == 'CHECKLIST' %}
       <table class="table table-striped table-bordered table-hover">
         <tbody>
           <tr>
@@ -76,6 +79,38 @@
           {% endfor %}
         </tbody>
       </table>
+      {% else %}
+      <table class="table table-striped table-bordered table-hover">
+        <tbody>
+          <tr>
+            <td colspan="2">&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          {% for fieldset in form.fieldsets %}
+          {% if fieldset.legend %}
+          <tr>
+            <td colspan="3"><h4 class="{{ fieldset.classes }}">{{ fieldset.legend }}</h4></td>
+          </tr>
+          {% endif %}
+          {% for field in fieldset %}
+          <tr{% if field.name in object.overrides %} class="warning"{% endif %}>
+            <td>{{ field.name }}</td>
+            <td>{{ field.help_text }}
+              {% if field.field.choices %}
+              <span class="options">
+                {% for choice in field.field.choices %}
+                {{ choice.1 }} <strong>({{ choice.0 }})</strong>
+                {% endfor %}
+              </span>
+              {% endif %}
+            </td>
+            <td style="text-align:center">{{ field }}</td>
+          </tr>
+          {% endfor %}
+          {% endfor %}
+        </tbody>
+      </table>
+      {% endif %}
     </div>
   </div>
 
