--- a/core/templates/core/submission_list.html
+++ b/core/templates/core/submission_list.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="row">
   <div class="span12">
-    {% submission_filter form %}
+    {% submission_filter form filter_form %}
   </div>
 </div>
 
