--- a/core/templates/core/forms_menu.html
+++ b/core/templates/core/forms_menu.html
@@ -1,5 +1,5 @@
 {% for form in forms %}
-<li class="dropdown"><a href="{% url submissions_list form.pk %}" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-check"></i> {{ form.name }} <b class="caret"></b></a>
+<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-check"></i> {{ form.name }} <b class="caret"></b></a>
     <ul class="dropdown-menu">
         <li><a href="{% url submissions_list form.pk %}"><i class="icon-list"></i> {{ form.name }}</a></li>
         <li><a href="{% url submissions_analysis form.pk %}"><i class="icon-tasks"></i> {{ form.name }} Analysis</a></li>
