--- a/core/templates/core/submission_filter.html
+++ b/core/templates/core/submission_filter.html
@@ -1,3 +1,4 @@
+{% load apollo %}
 <div class="well" style="padding-bottom:0">
   <form action="" method="post" id="filter">
     {% csrf_token %}
@@ -7,20 +8,18 @@
         <input class="span2" name="date" placeholder="Date" style="width:129px" size="16" type="text" value="{{ filter_form.date.value|default_if_none:"" }}" readonly="readonly">
         <span class="add-on"><i class="icon-calendar"></i></span>
       </div>
-      <input class="span4" type="text" name="location" class="input-xlarge" placeholder="Location">
-      {% if form.type != 'CHECKLIST' %}<a type="submit" class="span1 btn btn-warning" href="javascript:document.getElementById('filter').submit();"><i class="icon-search icon-white"></i> Search</a>{% endif %}
+      <input class="span4" type="text" value="{{ filter_form.location.value|default_if_none:"" }}" name="location" class="input-xlarge" placeholder="Location">
+      {% if form.type != 'CHECKLIST' %}<button type="submit" style="margin-left:1em" class="btn btn-warning"><i class="icon-search icon-white"></i> Search</button> <a class="btn form-reset" style="margin-left:0.5em">Clear</a>{% endif %}
     </div>
     {% if form.type == 'CHECKLIST' %}
     <div class="controls controls-row">
       {% for group in form_groups %}
-      <select class="span2" name="group_{{ group.pk }}">
-        <option value="0">{{ group.name }} Status</option>
-        <option value="1">{{ group.name }} Partial</option>
-        <option value="2">{{ group.name }} Missing</option>
-        <option value="3">{{ group.name }} Complete</option>
-      </select>
-      {% endfor %}
-      <a type="submit" class="span1 btn btn-warning" href="javascript:document.getElementById('filter').submit();"><i class="icon-search icon-white"></i> Search</a>
+      {{ filter_form|groupsel:group.pk }}
+      {% endfor %}      
+    </div>
+    <div class="">
+      <button type="submit" class="btn btn-warning"><i class="icon-search icon-white"></i> Search</button>
+      <a class="btn form-reset">Clear</a>
     </div>
     {% endif %}
   </form>
