--- a/zimbabwe/templates/core/layout.html
+++ b/zimbabwe/templates/core/layout.html
@@ -33,7 +33,7 @@
     <div class="navbar navbar-static-top">
         <div class="navbar-inner">
           <div class="container">
-            <a class="brand" href="#"><img src="{{ STATIC_URL }}img/logo.png"> Apollo &nbsp<span style="color: #E5E5E5;">|</span>&nbsp <span style="font-size: 15px; cursor:default; font-weight:bold;">Observer Information System<span></a>
+            <a class="brand" href="#"><img src="{{ STATIC_URL }}img/logo.png">&nbsp Apollo &nbsp<span style="color: #E5E5E5;">|</span>&nbsp <span style="font-size: 15px; cursor:default; font-weight:bold;">Observer Information System<span></a>
             <ul class="nav pull-right">
               <li><a href="{% url dashboard %}"><i class="icon-home"></i> Dashboard</a></li>
               {% forms_menu %}
