replace Monitor Id with Observer Id

--- a/core/templates/core/submission_edit.html
+++ b/core/templates/core/submission_edit.html
@@ -18,7 +18,7 @@
           </tr>
           {% endif %}
           <tr>
-            <th>Monitor</th>
+            <th>Observer</th>
             <td>{{ submission.observer }}</td>
             {% for sibling in siblings %}
             <td>{{ sibling.observer }}</td>
