--- a/core/templates/core/submission_header.html
+++ b/core/templates/core/submission_header.html
@@ -1,5 +1,5 @@
 <tr>
-    <th>Monitor ID</th>
+    <th>Observer ID</th>
     <th>Date</th>
     {% for location_type in location_types %}
     <th>{{ location_type.name }}</th>
