--- a/core/templates/core/submission_filter.html
+++ b/core/templates/core/submission_filter.html
@@ -3,7 +3,7 @@
   <form action="" method="post" id="filter">
     {% csrf_token %}
     <div class="controls controls-row">
-      <input class="span2" type="text" name="observer__observer_id" value="{{ filter_form.observer__observer_id.value|default_if_none:"" }}" placeholder="Monitor ID">
+      <input class="span2" type="text" name="observer__observer_id" value="{{ filter_form.observer__observer_id.value|default_if_none:"" }}" placeholder="Observer ID">
       <div class="input-append date span2 datesel" data-date="" data-date-format="yyyy-mm-dd">
         <input class="span2" name="date" placeholder="Date" style="width:129px" size="16" type="text" value="{{ filter_form.date.value|default_if_none:"" }}" readonly="readonly">
         <span class="add-on"><i class="icon-calendar"></i></span>
