took out numberic section of checklist analysis

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -145,7 +145,7 @@
     </div>
   </div>
   <div class="span3 well">
-    <legend>Closing</legend>
+    <legend>Official Results</legend>
     <div>
       <script type="text/javascript+protovis">
         width = 250,
