changed 'Official Results' to just 'Results' on the dashboard

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -187,7 +187,7 @@
             </div>
         </div>
         <div class="span4 well">
-            <legend>Official Results</legend>
+            <legend>Results</legend>
             <div>
               <script type="text/javascript+protovis">
                 width = 250,
